versioned_docs/version-4.0.x/reference/functions/Install-ADTMSUpdates.mdx
---
id: Install-ADTMSUpdates
title: Install-ADTMSUpdates
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Install all Microsoft Updates in a given directory.

## SYNTAX

```powershell
Install-ADTMSUpdates [-Directory] <String> [<CommonParameters>]
```

## DESCRIPTION

Install all Microsoft Updates of type ".exe", ".msu", or ".msp" in a given directory (recursively search directory).
The function will check if the update is already installed and skip it if it is.
It handles older redistributables and different types of updates appropriately.

## EXAMPLES

### EXAMPLE 1

```powershell
Install-ADTMSUpdates -Directory "$($adtSession.DirFiles)\MSUpdates"
```

Installs all Microsoft Updates found in the specified directory.

## PARAMETERS

### -Directory

Directory containing the updates.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return any objects.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Install-ADTMSUpdates](./Install-ADTMSUpdates.mdx)
